--- a/Dolacna.Webpage/wwwroot/locale/sk/translation.json
+++ b/Dolacna.Webpage/wwwroot/locale/sk/translation.json
@@ -146,6 +146,11 @@
   "team": {
     "header": "Náš tím",
     "subheader": "Zoznámte sa s ľuďmi, ktorí umožňujú našu misiu.",
+    "aboutUs": {
+      "header": "O nás",
+      "paragraph1": "Sme skupina dlhoročných kamarátov, ktorých spojilo nielen priateľstvo, ale aj spoločná vášeň pre technológie a zlepšovanie každodenného života ľudí. Poznáme sa už od strednej školy a neskôr sme spolu študovali na Slovenskej technickej univerzite v Bratislave. Počas rokov spoločného štúdia a mimoškolských projektov sme si vytvorili silný tím, ktorý sa dokáže navzájom dopĺňať a motivovať.",
+      "paragraph2": "Naším aktuálnym cieľom je vytvoriť praktickú mobilnú aplikáciu, ktorá ľuďom na Slovensku pomôže jednoducho sledovať aktuálne zľavy a akcie v supermarketoch. Veríme, že vďaka technológii môžeme ušetriť čas aj peniaze, a zároveň pomôcť ľuďom lepšie plánovať svoje nákupy."
+    },
     "members": [
       {
         "name": "Adam Martiška",
@@ -168,53 +173,71 @@
 
   "howItWorksPage": {
     "title": "Ako to funguje",
-    "subtitle": "Naučte sa používať hlavné funkcie našej aplikácie pomocou podrobných návodov.",
-    "searchPlaceholder": "Vyhľadajte návody alebo funkcie...",
-    "noResults": "Nenašli sa žiadne výsledky.",
-    "features": {
-      "search": {
-        "name": "Vyhľadávanie",
-        "description": "Rýchlo nájdite produkty a recepty pomocou nášho výkonného vyhľadávača. Filtrovať môžete podľa kategórie, ceny alebo diétneho obmedzenia.",
-        "tutorials": [
-          {
-            "title": "Ako vyhľadávať produkty",
-            "content": "1. Prejdite na hlavnú stránku a nájdite vyhľadávací panel hore.\n2. Zadajte názov produktu alebo receptu, ktorý hľadáte.\n3. Použite filtre na zúženie výsledkov.\n4. Kliknite na výsledok pre viac detailov."
-          },
-          {
-            "title": "Používanie pokročilých filtrov",
-            "content": "1. Kliknite na tlačidlo \"Filtre\" vedľa vyhľadávacieho panela.\n2. Vyberte kategórie, cenové rozpätia alebo diétne štítky.\n3. Použite filtre na aktualizáciu výsledkov vyhľadávania."
-          }
+    "subtitle": "Objavte, ako naša platforma pomáha šetriť peniaze pri nákupoch potravín pomocou inteligentného porovnávania cien a AI kategorizácie.",
+    "steps": [
+      {
+        "number": 1,
+        "title": "Zbieranie údajov",
+        "subtitle": "Údaje z viacerých obchodov",
+        "description": "Zbierame údaje o produktoch z viacerých obchodných reťazcov vrátane Tesco, Kaufland, Billa a ďalších hlavných predajcov na Slovensku.",
+        "details": [
+          "Monitorovanie cien v reálnom čase z 5+ hlavných obchodných reťazcov",
+          "Informácie o produktoch vrátane názvov, opisov a kategórií",
+          "Sledovanie špeciálnych ponúk a zliav",
+          "Aktualizácie dostupnosti tovaru"
         ]
       },
-      "shoppingList": {
-        "name": "Nákupný zoznam",
-        "description": "Jednoducho vytvárajte a spravujte svoje nákupné zoznamy. Pridávajte položky priamo z výsledkov vyhľadávania alebo receptov.",
-        "tutorials": [
-          {
-            "title": "Vytvorenie nákupného zoznamu",
-            "content": "1. Prejdite do sekcie \"Nákupný zoznam\" v hlavnom menu.\n2. Kliknite na \"Pridať položku\" a zadajte názov produktu.\n3. Nastavte množstvo a voliteľné poznámky.\n4. Uložte si zoznam na neskôr."
-          },
-          {
-            "title": "Pridávanie položiek z receptov",
-            "content": "1. Otvorte recept, ktorý sa vám páči.\n2. Kliknite na tlačidlo \"Pridať do nákupného zoznamu\".\n3. Ingrediencie sa automaticky pridajú do vášho nákupného zoznamu."
-          }
+      {
+        "number": 2,
+        "title": "AI kategorizácia",
+        "subtitle": "Inteligentná organizácia produktov",
+        "description": "Náš AI systém inteligentne kategorizuje produkty do našej jednotnej databázy, čím zabezpečuje presné porovnania medzi rôznymi obchodmi.",
+        "details": [
+          "Algoritmy strojového učenia spárujú podobné produkty medzi obchodmi",
+          "Automatická klasifikácia produktov podľa kategórie a značky",
+          "Detekcia duplikátov a normalizácia produktov",
+          "Hodnotenie kvality na základe atribútov produktu"
         ]
       },
-      "profile": {
-        "name": "Profil",
-        "description": "Spravujte svoj účet, preferencie a zobrazte si históriu svojej aktivity.",
-        "tutorials": [
-          {
-            "title": "Aktualizácia profilu",
-            "content": "1. Prejdite do sekcie \"Profil\" v menu.\n2. Kliknite na \"Upraviť profil\".\n3. Aktualizujte svoje osobné údaje a preferencie.\n4. Uložte zmeny pre aktualizáciu profilu."
-          },
-          {
-            "title": "Zobrazenie histórie aktivity",
-            "content": "1. V sekcii \"Profil\" prejdite nižšie na \"História aktivity\".\n2. Prezrite si svoje posledné vyhľadávania, zoznamy a zobrazené recepty."
-          }
+      {
+        "number": 3,
+        "title": "Porovnanie cien",
+        "subtitle": "Nájdite najlepšie ponuky",
+        "description": "Pre každý produkt poskytujeme komplexné porovnanie cien, ktoré vám ukáže presne, kde nájdete najlepšie ponuky.",
+        "details": [
+          "Porovnanie cien vedľa seba vo všetkých zúčastnených obchodoch",
+          "Historické trendy cien a príležitosti na úspory",
+          "Zvýrazňovanie zliav a akcií",
+          "Výpočty ceny za jednotku pre presné porovnania"
+        ]
+      },
+      {
+        "number": 4,
+        "title": "Inteligentné nákupné zoznamy",
+        "subtitle": "Optimalizujte svoje nákupy",
+        "description": "Vytvorte si nákupné zoznamy a náš systém vypočíta, ktorá kombinácia obchodov vám poskytne najnižšie celkové náklady.",
+        "details": [
+          "Automatický výpočet nákladov pre celé nákupné zoznamy",
+          "Optimalizácia viacerých obchodov pre maximálne úspory",
+          "Navrhované alternatívy pre vypredané položky",
+          "Optimalizácia nákupnej trasy v obchodoch"
+        ]
+      },
+      {
+        "number": 5,
+        "title": "Sledovanie úspor",
+        "subtitle": "Monitorujte svoje úspory",
+        "description": "Sledujte svoje úspory v čase s podrobnou analytikou, ktorá ukazuje, koľko ste ušetrili tento mesiac a celkovo.",
+        "details": [
+          "Mesačné a ročné súhrny úspor",
+          "Porovnanie s priemernými tržnými cenami",
+          "Ciele úspor a sledovanie ich plnenia",
+          "Podrobná analytika výdajov a poznatky"
         ]
       }
-    }
+    ],
+    "searchPlaceholder": "Vyhľadajte kroky alebo funkcie...",
+    "noResults": "Nenašli sa žiadne výsledky."
   },
 
   "privacyPolicy": {
